--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_API_BASE_URL=http://localhost:4001
 # API
 PORT=4001
 DATABASE_URL=postgresql://user:password@localhost:5432/lockedin
+REDIS_URL=redis://localhost:6379
