--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,3 +1,4 @@
 PORT=4001
 DATABASE_URL=postgresql://user:password@localhost:5432/lockedin
 REDIS_URL=redis://localhost:6379
+LOCKEDIN_ADMIN_EMAILS=admin@example.com
