--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "node ../../scripts/ensure-lightningcss.cjs"
   },
   "dependencies": {
     "@lockedin/shared": "0.1.0",
