--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "dev:api": "npm run dev -w apps/api",
     "build:web": "npm run build -w apps/web",
     "build:api": "npm run build -w apps/api",
-    "lint:web": "npm run lint -w apps/web",
-    "postinstall": "node scripts/ensure-lightningcss.cjs"
+    "lint:web": "npm run lint -w apps/web"
   }
 }
