--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "postinstall": "node ../../scripts/ensure-lightningcss.cjs"
+    "lint": "eslint"
   },
   "dependencies": {
     "@lockedin/shared": "0.1.0",
