--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,15 +16,17 @@
     "express": "^4.19.2",
     "nodemailer": "^6.10.1",
     "pg": "^8.12.0",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/nodemailer": "^6.4.14",
     "@types/node": "^20.17.2",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.11.10",
+    "@types/socket.io": "^3.0.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
