force api rebuild in build script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:web": "npm run dev -w apps/web",
     "dev:api": "npm run dev -w apps/api",
     "build:web": "npm run build -w apps/web",
-    "build:api": "npm run build -w apps/api",
+    "build:api": "rm -rf apps/api/dist && npm run build -w apps/api",
     "lint:web": "npm run lint -w apps/web"
   },
   "optionalDependencies": {
