--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
     "pg": "^8.12.0",
     "redis": "^4.7.0",
@@ -23,6 +24,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.2",
     "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.11.10",
