--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev:web": "npm run dev -w apps/web",
     "dev:api": "npm run dev -w apps/api",
+    "dev:mobile": "npm run start -w apps/mobile",
     "build:web": "npm run build -w apps/web",
     "build:api": "rm -rf apps/api/dist && npm run build -w apps/api",
     "lint:web": "npm run lint -w apps/web"
