--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
+    "dev:mobile": "expo start",
+    "dev": "expo start",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -10,14 +12,14 @@
   },
   "dependencies": {
     "@lockedin/shared": "0.1.0",
-    "@react-native-async-storage/async-storage": "^3.0.1",
-    "expo": "~55.0.2",
-    "expo-status-bar": "~55.0.4",
-    "react": "19.2.0",
-    "react-native": "0.83.2"
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "expo": "~54.0.0",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-native": "0.81.5"
   },
   "devDependencies": {
-    "@types/react": "~19.2.2",
+    "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   },
   "private": true
